Version 2.2.1

 User-visible changes:
  * Add: support for Vimeo (closes issue #19)
  * Fix: return code is always 0 (closes issue #20)

 Developer-visible changes:
  * Add: t/12error.t


Version 2.2.0
(June 14, 2009)

FOREWORD
--------

This release is a major overhaul aimed to fix the previous design flaws
and clean up the codebase. Note that 2.2.0 breaks compatibility with
the earlier versions of clive.

Most users will not notice much differences after upgrading to 2.2.0
but those users who have used clive for anything more than "clive URL"
should read the changes carefully. The summary of changes section
includes more detailed changes that is recommended reading for all
users and maintainers.

2.2.0 changes the license from ISC to GPLv3. The license was last
changed in 2.1.0 to ISC but has now been reverted back to GPLv3 after
some further consideration.

Config::Tiny has been replaced with Getopt::ArgvFile. The latter had
some advantages over Config::Tiny that lead to the switch. For example,
instead of trying to memorize the (often confusing) config variable
names, users can now use command line options in the config file.

This also means that everytime a new feature is added to the program,
we are no longer required to modify the code responsible for parsing
the config file. Using Getopt::ArgvFile also required adding only one
line of code to the project whereas Config::Tiny required several.

cache no longer reads by default. This means that --cache-read option
must be invoked for clive to read previously stored video records
from the cache. The change was made after seeing how most users found
the reading from cache too confusing and frequently reported expired
link errors such as HTTP 403 as bugs even though the behaviour was
documented in the manual page. DAERTM?

--emit-csv now outputs very few details about the videos. Only those
fields that are known to be any use are printed out.

2.2.0 also removes a number of less used features that have lingered